--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "@react-navigation/stack": "^7.4.5",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "react": "19.0.0",
@@ -25,8 +28,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-reanimated": "^4.0.1",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
