--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.3",
     "react-redux": "^9.2.0",
