--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-haptics": "~13.0.1",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
@@ -34,7 +35,8 @@
     "react-native-toast-message": "^2.3.3",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "@react-native-community/datetimepicker": "8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
