feat(auth): integrate Google Sign-In with Firebase

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -20,10 +20,20 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.viley.userhaloraapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": ["@react-native-google-signin/google-signin"],
+    "extra": {
+      "eas": {
+        "projectId": "8662ee86-2638-42d1-b63b-b277d7a1ac94"
+      },
+      "googleSignIn": {
+        "androidClientId": "1029103419885-iqcquo983spkugqhdcqeu5p6l1th3g8d.apps.googleusercontent.com"
+      }
     }
   }
 }
