feat: add user validation system and fix Google avatar display - Implement user info validation before order placement - Create UserInfoRequiredModal for missing information prompt - Fix Google login avatar not showing in profile screens - Smart validation: skip name check for Google users - Update Redux state sync for user data - Implement auto-scroll when focusing input fields in Login and Register

--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "user-halora-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/halora_cosmestic.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": false,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/halora_cosmestic.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/halora_cosmestic.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
