--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1029103419885
 EXPO_PUBLIC_FIREBASE_APP_ID=1:1029103419885:web:4f8782b2119682c85927e4
 EXPO_PUBLIC_FIREBASE_DATABASE_URL=https://halora-comestic-default-rtdb.asia-southeast1.firebasedatabase.app
 
-# Cloudinar
+# Cloudinary
 EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=de8vufzzx
 EXPO_PUBLIC_CLOUDINARY_API_KEY=965448253266866
 EXPO_PUBLIC_CLOUDINARY_API_SECRET=0Za2Z-1khM-sVnqQ8mJyyaMD8pM
