feat: add AI cosmetic consultant chatbot with smart product recommendations
- Implement Gemini AI for professional skincare advice
- Smart product matching and clickable recommendation cards
- Offline consultation fallback with expert skincare tips
- Rate limiting and graceful error handling

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ EXPO_PUBLIC_FIREBASE_DATABASE_URL=https://halora-comestic-default-rtdb.asia-sout
 EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=de8vufzzx
 EXPO_PUBLIC_CLOUDINARY_API_KEY=965448253266866
 EXPO_PUBLIC_CLOUDINARY_API_SECRET=0Za2Z-1khM-sVnqQ8mJyyaMD8pM
+
+# Gemini AI
+EXPO_PUBLIC_GEMINI_API_KEY=AIzaSyBcd8kxN9w_reBKovGp77VQQJWDnTif3a0
+EXPO_PUBLIC_AI_PROVIDER=gemini
