update: update chat bot about addition function voice in chat bot Halora AI

--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSMicrophoneUsageDescription": "Ứng dụng cần quyền truy cập microphone để ghi âm tin nhắn voice cho chatbot AI."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -21,14 +24,13 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.viley.userhaloraapp"
+      "package": "com.viley.userhaloraapp",
+      "permissions": ["android.permission.RECORD_AUDIO"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "@react-native-google-signin/google-signin"
-    ],
+    "plugins": ["@react-native-google-signin/google-signin"],
     "extra": {
       "eas": {
         "projectId": "8662ee86-2638-42d1-b63b-b277d7a1ac94"
