--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@react-navigation/stack": "^7.4.5",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
     "expo": "~53.0.20",
+    "expo-av": "~15.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-haptics": "~13.0.1",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-speech": "~13.1.7",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "react": "19.0.0",
@@ -40,13 +44,11 @@
     "react-native-webview": "^13.15.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "yup": "^1.7.0",
-    "expo-dev-client": "~5.2.4",
-    "expo-av": "~15.1.7",
-    "expo-speech": "~13.1.7"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
