--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.3.24",
     "@react-navigation/stack": "^7.4.5",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/stripe-react-native": "^0.53.1",
     "axios": "^1.11.0",
     "crypto-js": "^4.2.0",
     "expo": "~53.0.20",
