feat: Upgrade AI service with OpenRouter integration and smart recommendations
- Switch from Gemini API to OpenRouter with ChatGPT GPT-3.5-turbo
- Add multi-model fallback system (GPT-3.5-turbo  GPT-4o-mini  Claude-3-haiku  Gemini Pro)
- Implement intelligent product matching with scoring system
- Add profile-based recommendations (skin type, concerns, age)
- Enhance SmartRecommendations with behavioral analysis
- Fix null safety issues with optional chaining
- Comment verbose console logs for cleaner output
- Support advanced recommendation prompts with user context

--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.28.3",
     "@types/crypto-js": "^4.2.2",
     "@types/react": "~19.0.10",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "typescript": "~5.8.3"
   },
   "private": true
