--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": false,
     "splash": {
-      "image": "./assets/halora-icon-logo.png",
+      "image": "./assets/halora-splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
