--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": false,
     "splash": {
-      "image": "./assets/halora-splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/halora-icon-logo.png",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "ios": {
