--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.2.0",
     "expo": "~53.0.20",
     "expo-av": "~15.1.7",
+    "expo-blur": "^15.0.7",
     "expo-dev-client": "~5.2.4",
     "expo-haptics": "~13.0.1",
     "expo-image-picker": "^16.1.4",
